# report-card

./: .dockerignore  .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  check_prerequisites.sh  docker-compose.override.yml  docker-compose.yml  justfile
backend/: .dockerignore  Dockerfile  alembic.ini  justfile  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: a51ee6bda280_add_user_sessions_table.py  c002273bc91d_initial_database_schema_with_all_models.py
backend/src/app/: main.py
backend/src/app/core/: config.py  database.py  security.py  seed_data.py
backend/src/app/dependencies/: __init__.py  auth.py
backend/src/app/middleware/: __init__.py  csrf.py  session.py
backend/src/app/models/: __init__.py  achievement.py  base.py  class_model.py  grade.py  report.py  school.py  session.py  student.py  subject.py  teacher_assignment.py  term.py  user.py
backend/src/app/schemas/: __init__.py  achievement_schemas.py  class_schemas.py  grade_schemas.py  report_schemas.py  student_schemas.py  term_schemas.py
backend/src/app/services/: __init__.py  achievement_service.py  auth_service.py  (+4 more)
backend/templates/: report_card.html
backend/tests/: conftest.py  conftest_minimal.py  test_achievement_service.py  test_database.py  test_integration_workflow.py  test_report_service.py
backend/tests/test_auth/: __init__.py  conftest.py  conftest.py.backup  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_endpoints_simple.py  test_auth_service.py  test_debug_tables.py  test_integration.py  test_middleware.py
(+65 files in other folders)
